--- a/src/render/index.html
+++ b/src/render/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fast Vite Electron App</title>
+    <title>虫洞-局域网文件传输工具</title>
 </head>
 
 <body>
